# hackathon_encode

./: docker-compose.yml  package-lock.json  package.json
.devphase/: releases.json
chessy/: .gitignore  package.json
chessy/contracts/oh_my_chess/: Cargo.toml
chessy/contracts/oh_my_chess/src/: lib.rs
chessy/tests/oh_my_chess/: flipper.test.ts
chessy/typings/: OhMyChess.ts
